domainmod/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: domainmod
spec:
  selector:
    matchLabels:
      app: domainmod-mariadb
  serviceName: mariadb
  template:
    metadata:
      labels:
        app: domainmod-mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:13.0.2
          ports:
            - containerPort: 3306
              name: db
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
