domainmod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domainmod
  namespace: domainmod
  labels:
    app: domainmod
spec:
  selector:
    matchLabels:
      app: domainmod
  template:
    metadata:
      labels:
        app: domainmod
    spec:
      containers:
        - name: domainmod
          # TODO pin image digest
          image: domainmod/domainmod
          ports:
            - containerPort: 80
              name: web
