domainmod/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: domainmod
spec:
  selector:
    app: domainmod-mariadb
  ports:
    - port: 3306
      name: db
      targetPort: db
