domainmod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domainmod
  namespace: domainmod
spec:
  selector:
    app: domainmod
  ports:
    - port: 80
      name: web
      targetPort: web
